OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/p/opensearchserve/feature-request/
http://sourceforge.net/p/opensearchserve/bug-report/

OpenSearchServer 1.5

New features:
- 272: Automatically set cookies in the web crawler
- 271: Disable nofollow directive
- 270: Database based script
- 269: Upgrade ZK library (6.5.2)

OpenSearchserver 1.4

New features:
- 266: Merge multiple indices
- 265: Retaining Search - Switch Between Renders
- 260: Add Visio parser and Publisher parser
- 257: Upgrade Apache CXF to 2.7.x
- 251: A report module
- 250: Server time in scheduler interface
- 249: Extraction of user and group rights when crawling CIFS/SMB and FTP
- 248: Upgrade ZK CE to 6.5
- 247: Support of additional characters in LetterOrDigitTokenizer
- 246: Named entity recognition based on a search request
- 245: Highlighting in PDF documents and images (OCR)
- 243: RSS Parser

Bug fixes:
- 187: ICEPdf parser puts brackets to the indexed words
- 186: ICEPdf parser: only the first page is indexed
- 185: A more efficient Classifier loader
- 184: NullPointerException on SnippetField.copySnippetFields
- 183: maxClauseCount is set to 1024 when deleting large collection
- 178: Error reading 'fieldOrSnippetList' on type RendererController
- 170: Wrong file path in file crawler
- 169: java.lang.NullPointerException on flush expired contend from cache
- 168: Screenshot function not working
- 167: java.lang.NullPointerException on enabling crawler cache
- 166: Query -> More like This causes  Property 'name' not found on type java.lang.String
- 165: Not possible to copy an address in Crawler -> Web -> Pattern List
- 163: Weight is ignored in query scoring item
- 161: ParseException while crawling files

OpenSearchServer 1.3.1

New features:
- 244: Exportable autocompletion index
- 242: Be able to run only one crawl session
- 240: Several HTML parser configuration per index
